--- a/src/index.css
+++ b/src/index.css
@@ -59,11 +59,11 @@ html {
   font-size: 90%;
 }
 
-::-webkit-scrollbar{
+::-webkit-scrollbar {
   width: 6px;
 }
 
-::-webkit-scrollbar-thumb{
+::-webkit-scrollbar-thumb {
   @apply bg-secondary;
   width: 6px;
   border-radius: 6px;
@@ -168,4 +168,42 @@ html {
   100% {
     transform: rotate(-360deg);
   }
+}
+
+.phone-input-custom2 input {
+  background-color: transparent !important;
+  width: 100% !important;
+  /* height: 100% !important; */
+  border: none; /* Removes the border */
+  outline: none; /* Removes the focus outline */
+  border: none !important;
+}
+.phone-input-custom2 .flag-dropdown ul {
+  width: 100% !important;
+  max-width: 40rem !important;
+  min-width: 15rem;
+  overflow-x: hidden;
+  min-height: 20rem;
+}
+
+.phone-input-custom2 input {
+  background-color: green;
+  border: none; /* Removes the border */
+  outline: none; /* Removes the focus outline */
+  color: black;
+}
+.phone-input-custom2 {
+  color: black;
+  border-bottom: white 1px solid;
+  padding-bottom: 0.75rem;
+  background-color: white;
+  padding: 5px 5px 5px 0;
+
+  /* padding-left: 10px; */
+  border-radius: 6px;
+  height: 100%;
+  max-height: 44px;
+}
+.phone-input-custom2 .flag-dropdown {
+  color: black;
 }
